--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,15 @@ img {
   position: fixed;
   top: 0;
   z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 @media only screen and (max-width: 767px) {
   .l-header__inner {
@@ -73,9 +79,15 @@ img {
 .l-header__logo {
   height: inherit;
   background-color: aqua;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .l-header__img {
@@ -111,9 +123,15 @@ img {
 }
 
 .l-header__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 @media only screen and (max-width: 767px) {
@@ -121,6 +139,7 @@ img {
     position: fixed;
     top: 5rem;
     right: -120%;
+    -webkit-transition: right 0.4s;
     transition: right 0.4s;
   }
 }
@@ -130,13 +149,19 @@ img {
 }
 
 .l-header__lists {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  -moz-column-gap: 3.3rem;
-       column-gap: 3.3rem;
+  -webkit-column-gap: 3.3rem;
+     -moz-column-gap: 3.3rem;
+          column-gap: 3.3rem;
 }
 @media only screen and (max-width: 767px) {
   .l-header__lists {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
@@ -181,14 +206,20 @@ img {
     position: absolute;
     left: 0;
     bottom: 2.5rem;
-    transform: scale(0);
-    transform-origin: left;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    -webkit-transform-origin: left;
+            transform-origin: left;
+    -webkit-transition: -webkit-transform 0.4s;
+    transition: -webkit-transform 0.4s;
     transition: transform 0.4s;
+    transition: transform 0.4s, -webkit-transform 0.4s;
   }
 }
 
 .l-header__list a:hover::before {
-  transform: scale(1);
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .l-inner {
@@ -207,6 +238,7 @@ img {
   background-color: #bc0000;
   color: #fff;
   border: 0.1rem solid transparent;
+  -webkit-transition: background-color 0.4s, color 0.4s, border 0.4s;
   transition: background-color 0.4s, color 0.4s, border 0.4s;
 }
 
@@ -227,9 +259,15 @@ img {
   background-color: #bc0000;
   width: 7.1rem;
   height: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .c-ham__inner {
@@ -246,6 +284,7 @@ img {
   position: absolute;
   top: 0;
   left: 0;
+  -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
 
@@ -263,7 +302,8 @@ img {
 
 .c-ham.active .c-ham__inner span:nth-of-type(1) {
   top: 1.2rem;
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 .c-ham.active .c-ham__inner span:nth-of-type(2) {
@@ -272,7 +312,8 @@ img {
 
 .c-ham.active .c-ham__inner span:nth-of-type(3) {
   top: 1.2rem;
-  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 .p-top-fv {
@@ -304,7 +345,8 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .p-top-fv__text h2 {
@@ -362,8 +404,13 @@ img {
 
 .p-top-concept__diagram {
   padding-top: 1.7rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   row-gap: 1.8rem;
 }
 @media only screen and (max-width: 767px) {
@@ -373,9 +420,15 @@ img {
 }
 
 .p-top-concept-diagram__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .p-top-concept-diagram-row__pri {
@@ -411,7 +464,8 @@ img {
   position: absolute;
   left: 50%;
   bottom: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .p-top-concept-diagram-row__circle--top::before {
@@ -422,7 +476,8 @@ img {
   position: absolute;
   left: 50%;
   bottom: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .p-top-concept-diagram-row__circle--top::after {
@@ -433,7 +488,8 @@ img {
   border-color: transparent transparent #bc0000 #bc0000;
   position: absolute;
   bottom: 4rem;
-  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
 }
 
 .p-top-concept-diagram-row__sec {
@@ -501,19 +557,25 @@ img {
 }
 
 .p-top-reason__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-block: 2.8rem 5rem;
 }
 @media only screen and (max-width: 767px) {
   .p-top-reason__block {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-block: 3.6rem 3.9rem;
   }
 }
 
 .p-top-reason-block__img {
   width: 35rem;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 @media only screen and (max-width: 767px) {
   .p-top-reason-block__img {
@@ -551,6 +613,8 @@ img {
 
 .p-top__voice {
   padding-block: 6.4rem 6rem;
+  padding-inline: 7rem;
+  margin: auto;
 }
 @media only screen and (max-width: 767px) {
   .p-top__voice {
@@ -559,51 +623,66 @@ img {
 }
 
 .p-top-voice__inner {
-  max-width: 94rem;
+  max-width: 97.5rem;
   width: 100%;
-  padding-inline: 3rem;
+  padding-inline: 1.25rem;
   margin: 0 auto;
 }
 
 .p-top-voice__lists {
-  display: flex;
-  -moz-column-gap: 3.5rem;
-       column-gap: 3.5rem;
-  justify-content: space-between;
+  width: 100%;
+  position: relative;
   padding-top: 3.6rem;
+}
+
+.p-top-voice__list {
+  margin: 0 1.75rem;
+}
+
+.p-top-voice__img {
+  width: 100%;
+}
+
+.p-top-voice__name {
+  background-color: aqua;
+  width: 100%;
+  text-align: center;
+  padding-block: 1.7rem 1rem;
+  color: #fff;
+  font-size: 2.037037037vw;
+  line-height: 1.5;
+  letter-spacing: -0.01em;
+}
+
+.p-top-voice__text {
+  width: 100%;
+  color: #fff;
+  font-size: 1.6666666667vw;
+  line-height: 1.6666666667;
+  font-weight: 500;
+}
+
+.slick-arrow {
+  z-index: 2 !important;
+  width: 2.8rem !important;
+  height: 4rem !important;
   position: relative;
 }
 
-.slick-list {
-  margin: 0 -17px;
-}
-
-.slick-slide {
-  margin: 0 17px;
-}
-
-.slick-prev, .slick-next {
-  display: block;
-  background: transparent; /* 背景を透明に */
-  border: none; /* ボーダーを消す */
-  outline: none; /* アウトラインを消す */
-  cursor: pointer; /* カーソルをポインターに */
-  position: absolute; /* 矢印を絶対位置に */
-  top: 47%; /* 縦位置を中央に */
-  transform: translateY(-50%); /* 中央に合わせる */
-  z-index: 10;
-}
-@media only screen and (max-width: 767px) {
-  .slick-prev, .slick-next {
-    top: 48%;
-    transform: translateY(-50%); /* 中央に合わせる */
-    opacity: 1;
-    z-index: 10;
-  }
+.slick-arrow::before {
+  content: "" !important;
+  width: 2.8rem !important;
+  height: 4rem !important;
+  position: absolute;
+  top: 0;
 }
 
 .slick-prev {
-  left: -4rem; /* 左矢印の位置 */
+  position: absolute;
+  top: 43%;
+  left: -2.5rem; /* 左矢印の位置 */
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 @media only screen and (max-width: 767px) {
   .slick-prev {
@@ -611,8 +690,18 @@ img {
   }
 }
 
+.slick-prev::before {
+  background-image: url(../images/arrow-prev.svg);
+  background-size: contain !important;
+  background-repeat: no-repeat;
+}
+
 .slick-next {
-  right: -4rem; /* 右矢印の位置 */
+  position: absolute;
+  top: 43%;
+  right: -2.5rem; /* 右矢印の位置 */
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 @media only screen and (max-width: 767px) {
   .slick-next {
@@ -620,27 +709,12 @@ img {
   }
 }
 
-.p-top-voice__img {
-  background-color: aqua;
-}
-
-.p-top-voice__name {
-  width: 100%;
-  text-align: center;
-  padding-block: 1.7rem 1rem;
-  color: #fff;
-  font-size: 2.2rem;
-  line-height: 1.5;
-}
-
-.p-top-voice__text {
-  width: 100%;
-  color: #fff;
-  font-size: 1.8rem;
-  line-height: 1.6666666667;
-  font-weight: 500;
+.slick-next::before {
+  background-image: url(../images/arrow-next.svg);
+  background-size: contain !important;
+  background-repeat: no-repeat;
 }
 
 .u-bg-red {
   background-color: #bc0000;
-}
+}/*# sourceMappingURL=style.css.map */
