--- a/scss/foundation/_variable.scss
+++ b/scss/foundation/_variable.scss
@@ -7,6 +7,13 @@ $color-red: #bc0000;
 }
 
 // $pixelSizeにfont-sizeの拡大最大値を入れると、その値以上に拡大しない
+// この関数だと、width:940px;のときに$pixelSizeが10pxとか22pxとかって代入の仕方になる
 @function hvw($pixelSize) {
  @return min(calc($pixelSize / 940 * 100vw), $pixelSize * 1px);
+}
+
+// $pixelSizeにfont-sizeの拡大最大値を入れると、その値以上に拡大しない
+// この関数だと、width:1080px;のときに$pixelSizeが10pxとか22pxとかって代入の仕方になる
+@function hvw1080($pixelSize) {
+ @return min(calc($pixelSize / 1080 * 100vw), $pixelSize * 1px);
 }
