--- a/css/style.css
+++ b/css/style.css
@@ -671,6 +671,8 @@ img {
 
 .p-top-voice__text {
   width: 100%;
+  padding-inline: 0.1rem;
+  text-align: left;
   color: #fff;
   font-size: min(1.6666666667vw, 18px);
   line-height: 1.6666666667;
